// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Timer renders double-digit minutes and seconds when passed seconds as props 1`] = `
<div>
  10
  :
  00
</div>
`;

exports[`Timer renders minutes and seconds when passed seconds as props 1`] = `
=======
exports[`Timer renders when passed seconds as props 1`] = `
>>>>>>> Inital dashboard integration
<div>
  02
  :
  00
</div>
`;
